--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Личный кабинет</h1>
 <form method="post" action="/logout">
+    <input type = "hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     <button type="submit">Выйти</button>
 </form>
 <br>
