Добавлено: админ может просматривать список пользователей и информацию о конкретном пользователе по id

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -14,6 +14,8 @@
 <hr>
 <a href="/infoOrders">Заказы пользователей</a>
 <hr>
+<a href="/infoPerson">Информация о пользователях</a>
+<hr>
 <div th:each="product : ${products}">
     <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
     <p th:text="'Цена: ' + ${product.getPrice()}"></p>
